--- a/Python/IRS Pricing.ipynb
+++ b/Python/IRS Pricing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "id": "8d5216f3",
    "metadata": {},
    "outputs": [],
@@ -40,18 +40,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "112349f3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1.0, 0.0407498], [2.0, 0.037767], [3.0, 0.037051], [4.0, 0.03707], [5.0, 0.0373805], [6.0, 0.037867], [7.0, 0.0383775], [8.0, 0.0388615], [9.0, 0.0393125], [10.0, 0.0397465]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = import_excel('Market Data.xlsx','USDIRS','A3:B12')\n",
     "#print(data)"
@@ -67,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "bc2f55c2",
    "metadata": {},
    "outputs": [],
@@ -98,68 +90,108 @@
    "id": "1e488e4d",
    "metadata": {},
    "source": [
-    "Part #2 - Compute the Maturity Date and Payment Date for Swaps"
+    "Function C - Curve Bootstrapping Function\n",
+    "\n",
+    "Gives you a set of Discount Factors and Zero Rates for a given curve"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 105,
    "id": "484f43fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import date,timedelta\n",
-    "import holidays\n",
-    "import pandas as pd\n",
+    "def bootstrap(data,i=-1):\n",
+    "    from datetime import date,timedelta\n",
+    "    import holidays\n",
+    "    import pandas as pd\n",
+    "    #PricingDate = date.today() #Use todays date as the Pricing Date\n",
+    "    PricingDate = date(2025,5,19) # For testing currently\n",
+    "    SDate = mfbd(PricingDate + timedelta(days=2),'US') #Calculating the Spot Start Date\n",
+    "    #print(PricingDate)\n",
+    "    #print(SDate)\n",
+    "    #print(MatYears)\n",
+    "    #print(SDate.year)\n",
+    "    df = pd.DataFrame(data)\n",
+    "    df.columns = ['Year','Rate']\n",
+    "    i = int(i)\n",
+    "    if i>-1:\n",
+    "        df.iat[i,1]=df.iat[i,1]+0.0001\n",
+    "    #    print(df.iat[i,1])\n",
+    "        \n",
+    "    #df.interpolate()\n",
+    "    #print(df)\n",
+    "    df['MatDate'] = SDate \n",
+    "    df['PmtDate'] = SDate\n",
     "\n",
-    "#PricingDate = date.today() #Use todays date as the Pricing Date\n",
-    "PricingDate = date(2025,5,19) # For testing currently\n",
-    "SDate = mfbd(PricingDate + timedelta(days=2),'US') #Calculating the Spot Start Date\n",
-    "#print(PricingDate)\n",
-    "#print(SDate)\n",
-    "#print(MatYears)\n",
-    "#print(SDate.year)\n",
-    "df = pd.DataFrame(data)\n",
-    "df.columns = ['Year','Rate']\n",
-    "#df.interpolate()\n",
-    "#print(df)\n",
-    "df['MatDate'] = SDate \n",
-    "df['PmtDate'] = SDate\n",
+    "    #Populate Maturity Date and Payment Date adjusting for pay delay\n",
     "\n",
-    "#Populate Maturity Date and Payment Date adjusting for pay delay\n",
-    "\n",
-    "for index,row in df.iterrows():\n",
-    "    df.at[index,'MatDate'] = mfbd(row['MatDate'] + pd.offsets.DateOffset(years=row['Year']),'US')\n",
-    "    df.at[index,'PmtDate'] = mfbd(df.at[index,'MatDate'] + pd.offsets.DateOffset(days=2),'US') #SOFR Swaps have 2 days Payment Delay\n",
+    "    for index,row in df.iterrows():\n",
+    "        df.at[index,'MatDate'] = mfbd(row['MatDate'] + pd.offsets.DateOffset(years=row['Year']),'US')\n",
+    "        df.at[index,'PmtDate'] = mfbd(df.at[index,'MatDate'] + pd.offsets.DateOffset(days=2),'US') #SOFR Swaps have 2 days Payment Delay\n",
     "    \n",
-    "   \n",
-    "df['MatDate'] = pd.to_datetime(df['MatDate']).dt.date # To remove hh:mm:ss from Date\n",
-    "df['PmtDate'] = pd.to_datetime(df['PmtDate']).dt.date\n",
-    "df['DC'] = df['PmtDate'].diff(periods=1) #Compute Periodic day counts\n",
-    "df.at[0,'DC']= pd.to_timedelta(df.at[0,'PmtDate']-SDate) #Compute first DC value from Start Date\n",
-    "df['DC']=pd.to_timedelta(df['DC']).dt.days.astype(float)/360 #Since Daycount is Act/360 for USD SOFR\n",
-    "#df['DC'] = df['DC']\n",
-    "#for each i in df['Year']:\n",
-    "#    df['MatDate'] = SDate + pd.offsets.DateOffset(years=i)\n",
+    "    #df['Pmt2'] = df['PmtDate']   #Duplicating the payment date for use in interpolation later\n",
+    "    df['MatDate'] = pd.to_datetime(df['MatDate']).dt.date # To remove hh:mm:ss from Date\n",
+    "    df['PmtDate'] = pd.to_datetime(df['PmtDate']).dt.date\n",
+    "    df['DC'] = df['PmtDate'].diff(periods=1) #Compute Periodic day counts\n",
+    "    df.at[0,'DC']= pd.to_timedelta(df.at[0,'PmtDate']-SDate) #Compute first DC value from Start Date\n",
+    "    df['DC'] = pd.to_numeric(df['DC'].dt.days)\n",
+    "    df['DC']=df['DC']/360 #Since Daycount is Act/360 for USD SOFR\n",
+    "    #df['DC'] = df['DC']\n",
+    "    #for each i in df['Year']:\n",
+    "    #    df['MatDate'] = SDate + pd.offsets.DateOffset(years=i)\n",
     "\n",
-    "#df['MatDate'] = date(SDate.year + df['Year'],SDate.month,SDate.day)\n",
-    "#print(df)    \n",
-    "#df.interpolate()\n",
+    "    #df['MatDate'] = date(SDate.year + df['Year'],SDate.month,SDate.day)\n",
+    "    #print(df)    \n",
+    "    #df.interpolate()\n",
+    "    import numpy as np\n",
+    "    df['DF'] = 1.000000\n",
+    " \n",
+    "    SDate = mfbd(SDate,'US')\n",
+    "\n",
+    "    #Just testing, delete later\n",
+    "    for index,row in df.iterrows():\n",
+    "        df.at[index,'DF'] = 1/(pow(1+row['Rate'],row['Year']))\n",
+    "\n",
+    "    #print(df)\n",
+    "    #dd = (df.at[0,'MatDate'] - SDate).days\n",
+    "    #print(dd)\n",
+    "    #df.at[0,'DF'] = 1/(1+df.at[0,'Rate']*(df.at[0,'PmtDate']-SDate).days/360)\n",
+    "\n",
+    "    #Compute actual Curve DFs for USD SOFR\n",
+    "    #The for loop is massively simplified to solve a linear system of equations. Will write a full document on how this is calculated later. For queries in the interim email pushkargondane@gmail.com \n",
+    "    dfdccumprodsum = 0\n",
+    "    for index,row in df.iterrows():\n",
+    "        df.at[index,'DF'] = (1 - df.at[index,'Rate']*dfdccumprodsum)/(1+df.at[index,'Rate']*df.at[index,'DC'])\n",
+    "        dfdccumprodsum = dfdccumprodsum + df.at[index,'DC']*df.at[index,'DF']\n",
+    "\n",
+    "    #Compute Zeros for USD SOFR\n",
+    "    # Please note that zeros requires an assumption of the approach. Here we are going to try and match\n",
+    "    # it with that of bloomberg by assuming continuous compounding\n",
+    "    # Different systems implement this bit in a different manner\n",
+    "\n",
+    "\n",
+    "    df['Zero']=1.000000\n",
+    "    \n",
+    "    for index,row in df.iterrows():\n",
+    "        p = pd.to_timedelta(df.at[index,'PmtDate']-df.at[index,'MatDate'])\n",
+    "        t = float(p.days)/365 + df.at[index,'Year']\n",
+    "        #print(t)\n",
+    "        df.at[index,'Zero'] = np.log(1/df.at[index,'DF'])/t\n",
+    "        \n",
+    "\n",
+    "\n",
+    "    #print(df)\n",
+    "    return df\n",
+    "    \n",
     "\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "fe026d33",
-   "metadata": {},
-   "source": [
-    "Part #3 - Compute Discount Factors and Zeros (Aka Curve Bootstrapping)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "3a0be3ff",
+   "execution_count": 109,
+   "id": "41a6fb8a",
    "metadata": {},
    "outputs": [
     {
@@ -181,44 +213,8 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "df['DF'] = 1\n",
-    "df['DF'] = df['DF'].astype(float)\n",
-    "SDate = mfbd(SDate,'US')\n",
-    "\n",
-    "#Just testing, delete later\n",
-    "for index,row in df.iterrows():\n",
-    "    df.at[index,'DF'] = 1/(pow(1+row['Rate'],row['Year']))\n",
-    "\n",
-    "#print(df)\n",
-    "#dd = (df.at[0,'MatDate'] - SDate).days\n",
-    "#print(dd)\n",
-    "#df.at[0,'DF'] = 1/(1+df.at[0,'Rate']*(df.at[0,'PmtDate']-SDate).days/360)\n",
-    "\n",
-    "#Compute actual Curve DFs for USD SOFR\n",
-    "#The for loop is massively simplified to solve a linear system of equations. Will write a full document on how this is calculated later. For queries in the interim email pushkargondane@gmail.com \n",
-    "dfdccumprodsum = 0\n",
-    "for index,row in df.iterrows():\n",
-    "    df.at[index,'DF'] = (1 - df.at[index,'Rate']*dfdccumprodsum)/(1+df.at[index,'Rate']*df.at[index,'DC'])\n",
-    "    dfdccumprodsum = dfdccumprodsum + df.at[index,'DC']*df.at[index,'DF']\n",
-    "\n",
-    "#Compute Zeros for USD SOFR\n",
-    "# Please note that zeros requires an assumption of the approach. Here we are going to try and match\n",
-    "# it with that of bloomberg by assuming continuous compounding\n",
-    "# Different systems implement this bit in a different manner\n",
-    "\n",
-    "\n",
-    "df['Zero']=1\n",
-    "df['Zero'] = df['Zero'].astype(float)\n",
-    "for index,row in df.iterrows():\n",
-    "    p = pd.to_timedelta(df.at[index,'PmtDate']-df.at[index,'MatDate'])\n",
-    "    t = float(p.days)/365 + df.at[index,'Year']\n",
-    "    #print(t)\n",
-    "    df.at[index,'Zero'] = np.log(1/df.at[index,'DF'])/t\n",
-    "    \n",
-    "\n",
-    "\n",
-    "print(df)\n"
+    "test=bootstrap(data)\n",
+    "print(test)"
    ]
   },
   {
@@ -226,7 +222,7 @@
    "id": "253de67c",
    "metadata": {},
    "source": [
-    "Part #4 - Validate DF vs Alternate System like Bloomberg\n",
+    "Function D - Validate DF vs Alternate System like Bloomberg\n",
     "\n",
     "![title][def]\n",
     "\n",
@@ -235,8 +231,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "8ffdd969",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare(df):\n",
+    "    import pandas as pd\n",
+    "    bbgdata = import_excel('Market Data.xlsx','USDIRS','g3:h12')\n",
+    "    bbg = pd.DataFrame(bbgdata)\n",
+    "    bbg.columns=['BBGDF','BBGZero']\n",
+    "    #print(bbg)\n",
+    "    comp = df[['Year','MatDate','PmtDate','DF','Zero']]\n",
+    "    #comp.append(bbg)\n",
+    "    #comp.join(bbg)\n",
+    "    comp['BBGDF'] = bbg['BBGDF'] #Need to find a better method to append columns as this is giving a warning \n",
+    "    #comp.assign(bbgdata)\n",
+    "    #comp['BBGDF'] = bbg.loc[:,'BBGDF']\n",
+    "    comp['BBGZero'] = bbg['BBGZero']\n",
+    "    #comp['BBGZero'] = bbg.loc[:,'BBGZero']\n",
+    "    comp['DF Gap(bps)']=(comp['BBGDF']-comp['DF'])*10000/comp['BBGDF']\n",
+    "    comp['Zero Gap(bps)']=(comp['BBGZero']-comp['Zero'])*10000/comp['BBGZero']\n",
+    "    print(comp)\n",
+    "    comp=comp.drop(columns=['Year','BBGDF','BBGZero','DF Gap(bps)','Zero Gap(bps)'])\n",
+    "    #Send the data back to excel \n",
+    "    export_excel('Market Data.xlsx','USDIRS','L2:L11',comp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "67a95d54",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +297,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/5g/4br4skc15dlb750j33xn06rh0000gn/T/ipykernel_1869/3610128809.py:8: SettingWithCopyWarning: \n",
+      "/var/folders/5g/4br4skc15dlb750j33xn06rh0000gn/T/ipykernel_1179/832407605.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -282,22 +307,7 @@
     }
    ],
    "source": [
-    "bbgdata = import_excel('Market Data.xlsx','USDIRS','g3:h12')\n",
-    "bbg = pd.DataFrame(bbgdata)\n",
-    "bbg.columns=['BBGDF','BBGZero']\n",
-    "#print(bbg)\n",
-    "comp = df[['Year','MatDate','PmtDate','DF','Zero']]\n",
-    "#comp.append(bbg)\n",
-    "#comp.join(bbg)\n",
-    "comp['BBGDF'] = bbg['BBGDF'] #Need to find a better method to append columns as this is giving a warning \n",
-    "#comp.assign(bbgdata)\n",
-    "#comp['BBGDF'] = bbg.loc[:,'BBGDF']\n",
-    "comp['BBGZero'] = bbg['BBGZero']\n",
-    "#comp['BBGZero'] = bbg.loc[:,'BBGZero']\n",
-    "comp['DF Gap(bps)']=(comp['BBGDF']-comp['DF'])*10000/comp['BBGDF']\n",
-    "comp['Zero Gap(bps)']=(comp['BBGZero']-comp['Zero'])*10000/comp['BBGZero']\n",
-    "print(comp)\n",
-    "comp=comp.drop(columns=['Year','BBGDF','BBGZero','DF Gap(bps)','Zero Gap(bps)'])"
+    "compare(test)"
    ]
   },
   {
@@ -312,28 +322,160 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30e8f03d",
+   "id": "01d3421d",
    "metadata": {},
    "source": [
-    "Part #5 - Sending the DFs and Zeros calculated back to excel"
+    "Function E - Pricing an Interest Rate Swap"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "4b37d99e",
+   "execution_count": 112,
+   "id": "63291349",
    "metadata": {},
    "outputs": [],
    "source": [
-    "export_excel('Market Data.xlsx','USDIRS','L2:L11',comp)"
+    "def priceIRS(i=-1):\n",
+    "    #Part A - Easy - Price the Fixed Leg of the IRS\n",
+    "    import pandas as pd\n",
+    "    from datetime import date,timedelta\n",
+    "    import holidays\n",
+    "\n",
+    "    data = import_excel('Market Data.xlsx','USDIRS','A3:B12') #Import market data\n",
+    "    df = bootstrap(data,i) #Bootstrap the curve\n",
+    "    PricingDate = date(2025,5,19) # For testing currently\n",
+    "    SDate = mfbd(PricingDate + timedelta(days=2),'US') #Calculating the Spot Start Date\n",
+    "    #Add 1 as Discount Factor for Spot Date in the Discount Factors Data Frame\n",
+    "    df.loc[-1] = [0,0,SDate,SDate,0,1,0]\n",
+    "    df.index = df.index+1\n",
+    "    df = df.sort_index()\n",
+    "\n",
+    "    fixed = import_excel('TradePrice.xlsx','SOFR','b3:g12')\n",
+    "    fixed = pd.DataFrame(fixed)\n",
+    "    fixed.columns=['SDate','EDate','PDate','Notional','Amort','FixRate']\n",
+    "\n",
+    "    #Apply MFBD Calendar on the dates\n",
+    "    for index,row in fixed.iterrows():\n",
+    "        fixed.at[index,'SDate'] = mfbd(row['SDate'],'US')\n",
+    "        fixed.at[index,'EDate'] = mfbd(row['EDate'],'US')\n",
+    "        fixed.at[index,'PDate'] = mfbd(row['PDate'],'US') \n",
+    "\n",
+    "    fixed['DC']=fixed['EDate']-fixed['SDate']\n",
+    "    fixed['DC']=pd.to_timedelta(fixed['DC']).dt.days.astype(float)/360\n",
+    "    fixed['CF']=fixed['Notional']*fixed['FixRate']*fixed['DC']\n",
+    "\n",
+    "    #fixed['PDate']=fixed['PDate'].values.astype(float)\n",
+    "    #df['Pmt2']=df['Pmt2'].values.astype(float)\n",
+    "    #df['PmtDate']=df['PmtDate'].values.astype(float)\n",
+    "    #Interpolate Discount Factors from Bootstrapping procedure\n",
+    "\n",
+    "\n",
+    "    df[\"PmtDate\"] = df[\"PmtDate\"].astype(\"datetime64[ns]\")\n",
+    "    df['PmtDate']=df['PmtDate'].values.astype(float)\n",
+    "    df[\"MatDate\"] = df[\"MatDate\"].astype(\"datetime64[ns]\")\n",
+    "    df['MatDate']=df['MatDate'].values.astype(float)\n",
+    "\n",
+    "    import numpy as np\n",
+    "    fixed['DF']=np.interp(fixed['PDate'],df['PmtDate'],df['DF']) #Simple linear interpolation \n",
+    "    fixed['NPV'] = fixed['DF']*fixed['CF']\n",
+    "    #print(fixed)\n",
+    "    #print(\"Fixed Leg NPV :\" ,fixed['NPV'].sum())\n",
+    "\n",
+    "    floating = import_excel('TradePrice.xlsx','SOFR','b16:i25')\n",
+    "    floating = pd.DataFrame(floating)\n",
+    "    floating.columns=['SDate','EDate','PDate','Notional','Amort','Index','Leverage','Spread']\n",
+    "\n",
+    "\n",
+    "    #Apply MFBD Calendar on the dates\n",
+    "    for index,row in floating.iterrows():\n",
+    "        floating.at[index,'SDate'] = mfbd(row['SDate'],'US')\n",
+    "        floating.at[index,'EDate'] = mfbd(row['EDate'],'US')\n",
+    "        floating.at[index,'PDate'] = mfbd(row['PDate'],'US')#Assumed standard Pay Delay of 2 Days\n",
+    "\n",
+    "    floating['DC']=floating['EDate']-floating['SDate']\n",
+    "    floating['DC']=pd.to_timedelta(floating['DC']).dt.days.astype(float)/360\n",
+    "    floating['DF']=np.interp(floating['PDate'],df['PmtDate'],df['DF']) #Simple linear interpolation \n",
+    "    floating['DFSdate']=np.interp(floating['SDate'],df['MatDate'],df['DF']) #Simple linear interpolation \n",
+    "    floating['DFEdate']=np.interp(floating['EDate'],df['MatDate'],df['DF']) #Simple linear interpolation \n",
+    "    floating['Forecast']=((floating['DFSdate']/floating['DFEdate'])-1)/floating['DC']\n",
+    "\n",
+    "    #The first forecast rate is incorrect as it ignores the impact due to the \n",
+    "    # daily fixings which have already occured. We need to make an adjustment for that\n",
+    "    fixings = import_excel('Market Data.xlsx','SOFRFix','C2:D348') #Import market data\n",
+    "    fixings = pd.DataFrame(fixings)\n",
+    "    fixings.columns=['Date','FixRate']\n",
+    "\n",
+    "    #print(floating[0,'SDate'])\n",
+    "    filter=floating.iat[0,0] #Obtain the start date of the fixings\n",
+    "    #print(filter)\n",
+    "    fixings = fixings[fixings['Date']>=filter] #Note we have assumed that fixings data is latest available. \n",
+    "    #We have also assumed that the fix for the 2 unknown days between last fixing and spot is also available\n",
+    "    #You can alternatively assume its the same as last fix and wont make much difference to overall calculations\n",
+    "\n",
+    "    fixings['DC'] = fixings['Date'].diff(periods=1) #Compute Periodic day counts\n",
+    "    fixings.iat[0,2] = fixings.iat[0,0] - mfbd(fixings.iat[0,0]+timedelta(days=1),'US')\n",
+    "    fixings['DC']=fixings['DC']*-1\n",
+    "    fixings['Days']=fixings['DC']/timedelta(days=1)/360 #Using Act/360 Day count convention\n",
+    "    fixings['FixDays']=fixings['FixRate']*fixings['Days']/100\n",
+    "    #print(fixings)\n",
+    "    #print(df.dtypes)\n",
+    "    #print(fixings['FixDays'].sum())  #This is the cumulative impact of the elapsed fixings\n",
+    "    #print(floating.dtypes)\n",
+    "\n",
+    "    floating.iat[0,12] = floating.iat[0,12] + fixings['FixDays'].sum()\n",
+    "    floating['NPV']=floating['Notional']*(floating['Leverage']*floating['Forecast']+floating['Spread'])*floating['DC']*floating['DF']\n",
+    "    #print(floating)\n",
+    "\n",
+    "    #print(\"Fixed Leg NPV :\" ,fixed['NPV'].sum())\n",
+    "    #print(\"Float Leg NPV :\" ,floating['NPV'].sum())\n",
+    "    #print(\"Total NPV: \", fixed['NPV'].sum()+floating['NPV'].sum() )\n",
+    "    return fixed['NPV'].sum()+floating['NPV'].sum()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "01d3421d",
+   "id": "4aedfe6f",
    "metadata": {},
    "source": [
-    "Part #6 - Pricing an Interest Rate Swap\n",
+    "Lets now generate the bucketed sensivitiy / DV01 for this trade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9ad3b46",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current NPV :  436822.06\n",
+      "Bucket  1 : 6.31\n",
+      "Bucket  2 : -8.53\n",
+      "Bucket  3 : -11.15\n",
+      "Bucket  4 : -16.54\n",
+      "Bucket  5 : -19.22\n",
+      "Bucket  6 : -23.43\n",
+      "Bucket  7 : -31.58\n",
+      "Bucket  8 : -33.03\n",
+      "Bucket  9 : -2769.42\n",
+      "Bucket  10 : -5318.7\n",
+      "Total Dv01 :  -8225.31\n"
+     ]
+    }
+   ],
+   "source": [
+    "NetPV = priceIRS() #Compute the unperturbed PV first\n",
+    "print (\"Current NPV : \", round(NetPV,2))\n",
+    "Dv01 = 0\n",
+    "for i in range(10):\n",
+    "    NewPV = priceIRS(i)\n",
+    "    print(\"Bucket \",i+1 ,\":\" , round(NewPV - NetPV,2))\n",
+    "\n",
+    "    Dv01 = Dv01 + NewPV - NetPV\n",
+    "print (\"Total Dv01 : \", round(Dv01,2))\n",
+    "\n",
     "\n"
    ]
   }
