--- a/Python/IRS Pricing.ipynb
+++ b/Python/IRS Pricing.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "8d5216f3",
    "metadata": {},
    "outputs": [],
@@ -33,14 +33,12 @@
     "    import xlwings as xw\n",
     "    wb = xw.Book(n)\n",
     "    sheet = wb.sheets[s]\n",
-    "    sheet.range(r).value = d\n",
-    "\n",
-    "\n"
+    "    sheet.range(r).value = d\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "112349f3",
    "metadata": {},
    "outputs": [],
@@ -59,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "bc2f55c2",
    "metadata": {},
    "outputs": [],
@@ -97,31 +95,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "id": "484f43fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def bootstrap(data,i=-1):\n",
+    "def bootstrap(data,i=-1,p=1):\n",
     "    from datetime import date,timedelta\n",
     "    import holidays\n",
     "    import pandas as pd\n",
     "    #PricingDate = date.today() #Use todays date as the Pricing Date\n",
     "    PricingDate = date(2025,5,19) # For testing currently\n",
     "    SDate = mfbd(PricingDate + timedelta(days=2),'US') #Calculating the Spot Start Date\n",
-    "    #print(PricingDate)\n",
-    "    #print(SDate)\n",
-    "    #print(MatYears)\n",
-    "    #print(SDate.year)\n",
     "    df = pd.DataFrame(data)\n",
     "    df.columns = ['Year','Rate']\n",
     "    i = int(i)\n",
     "    if i>-1:\n",
-    "        df.iat[i,1]=df.iat[i,1]+0.0001\n",
-    "    #    print(df.iat[i,1])\n",
+    "        df.iat[i,1]=df.iat[i,1]+0.0001*p\n",
     "        \n",
-    "    #df.interpolate()\n",
-    "    #print(df)\n",
     "    df['MatDate'] = SDate \n",
     "    df['PmtDate'] = SDate\n",
     "\n",
@@ -131,20 +122,13 @@
     "        df.at[index,'MatDate'] = mfbd(row['MatDate'] + pd.offsets.DateOffset(years=row['Year']),'US')\n",
     "        df.at[index,'PmtDate'] = mfbd(df.at[index,'MatDate'] + pd.offsets.DateOffset(days=2),'US') #SOFR Swaps have 2 days Payment Delay\n",
     "    \n",
-    "    #df['Pmt2'] = df['PmtDate']   #Duplicating the payment date for use in interpolation later\n",
     "    df['MatDate'] = pd.to_datetime(df['MatDate']).dt.date # To remove hh:mm:ss from Date\n",
     "    df['PmtDate'] = pd.to_datetime(df['PmtDate']).dt.date\n",
     "    df['DC'] = df['PmtDate'].diff(periods=1) #Compute Periodic day counts\n",
     "    df.at[0,'DC']= pd.to_timedelta(df.at[0,'PmtDate']-SDate) #Compute first DC value from Start Date\n",
     "    df['DC'] = pd.to_numeric(df['DC'].dt.days)\n",
     "    df['DC']=df['DC']/360 #Since Daycount is Act/360 for USD SOFR\n",
-    "    #df['DC'] = df['DC']\n",
-    "    #for each i in df['Year']:\n",
-    "    #    df['MatDate'] = SDate + pd.offsets.DateOffset(years=i)\n",
-    "\n",
-    "    #df['MatDate'] = date(SDate.year + df['Year'],SDate.month,SDate.day)\n",
-    "    #print(df)    \n",
-    "    #df.interpolate()\n",
+    " \n",
     "    import numpy as np\n",
     "    df['DF'] = 1.000000\n",
     " \n",
@@ -154,10 +138,6 @@
     "    for index,row in df.iterrows():\n",
     "        df.at[index,'DF'] = 1/(pow(1+row['Rate'],row['Year']))\n",
     "\n",
-    "    #print(df)\n",
-    "    #dd = (df.at[0,'MatDate'] - SDate).days\n",
-    "    #print(dd)\n",
-    "    #df.at[0,'DF'] = 1/(1+df.at[0,'Rate']*(df.at[0,'PmtDate']-SDate).days/360)\n",
     "\n",
     "    #Compute actual Curve DFs for USD SOFR\n",
     "    #The for loop is massively simplified to solve a linear system of equations. Will write a full document on how this is calculated later. For queries in the interim email pushkargondane@gmail.com \n",
@@ -190,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 5,
    "id": "41a6fb8a",
    "metadata": {},
    "outputs": [
@@ -241,15 +221,9 @@
     "    bbgdata = import_excel('Market Data.xlsx','USDIRS','g3:h12')\n",
     "    bbg = pd.DataFrame(bbgdata)\n",
     "    bbg.columns=['BBGDF','BBGZero']\n",
-    "    #print(bbg)\n",
     "    comp = df[['Year','MatDate','PmtDate','DF','Zero']]\n",
-    "    #comp.append(bbg)\n",
-    "    #comp.join(bbg)\n",
     "    comp['BBGDF'] = bbg['BBGDF'] #Need to find a better method to append columns as this is giving a warning \n",
-    "    #comp.assign(bbgdata)\n",
-    "    #comp['BBGDF'] = bbg.loc[:,'BBGDF']\n",
     "    comp['BBGZero'] = bbg['BBGZero']\n",
-    "    #comp['BBGZero'] = bbg.loc[:,'BBGZero']\n",
     "    comp['DF Gap(bps)']=(comp['BBGDF']-comp['DF'])*10000/comp['BBGDF']\n",
     "    comp['Zero Gap(bps)']=(comp['BBGZero']-comp['Zero'])*10000/comp['BBGZero']\n",
     "    print(comp)\n",
@@ -330,19 +304,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "id": "63291349",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def priceIRS(i=-1):\n",
+    "def priceIRS(i=-1,p=1):\n",
     "    #Part A - Easy - Price the Fixed Leg of the IRS\n",
     "    import pandas as pd\n",
     "    from datetime import date,timedelta\n",
     "    import holidays\n",
     "\n",
     "    data = import_excel('Market Data.xlsx','USDIRS','A3:B12') #Import market data\n",
-    "    df = bootstrap(data,i) #Bootstrap the curve\n",
+    "    df = bootstrap(data,i,p) #Bootstrap the curve\n",
     "    PricingDate = date(2025,5,19) # For testing currently\n",
     "    SDate = mfbd(PricingDate + timedelta(days=2),'US') #Calculating the Spot Start Date\n",
     "    #Add 1 as Discount Factor for Spot Date in the Discount Factors Data Frame\n",
@@ -364,9 +338,6 @@
     "    fixed['DC']=pd.to_timedelta(fixed['DC']).dt.days.astype(float)/360\n",
     "    fixed['CF']=fixed['Notional']*fixed['FixRate']*fixed['DC']\n",
     "\n",
-    "    #fixed['PDate']=fixed['PDate'].values.astype(float)\n",
-    "    #df['Pmt2']=df['Pmt2'].values.astype(float)\n",
-    "    #df['PmtDate']=df['PmtDate'].values.astype(float)\n",
     "    #Interpolate Discount Factors from Bootstrapping procedure\n",
     "\n",
     "\n",
@@ -378,8 +349,6 @@
     "    import numpy as np\n",
     "    fixed['DF']=np.interp(fixed['PDate'],df['PmtDate'],df['DF']) #Simple linear interpolation \n",
     "    fixed['NPV'] = fixed['DF']*fixed['CF']\n",
-    "    #print(fixed)\n",
-    "    #print(\"Fixed Leg NPV :\" ,fixed['NPV'].sum())\n",
     "\n",
     "    floating = import_excel('TradePrice.xlsx','SOFR','b16:i25')\n",
     "    floating = pd.DataFrame(floating)\n",
@@ -405,10 +374,9 @@
     "    fixings = pd.DataFrame(fixings)\n",
     "    fixings.columns=['Date','FixRate']\n",
     "\n",
-    "    #print(floating[0,'SDate'])\n",
     "    filter=floating.iat[0,0] #Obtain the start date of the fixings\n",
-    "    #print(filter)\n",
     "    fixings = fixings[fixings['Date']>=filter] #Note we have assumed that fixings data is latest available. \n",
+    "\n",
     "    #We have also assumed that the fix for the 2 unknown days between last fixing and spot is also available\n",
     "    #You can alternatively assume its the same as last fix and wont make much difference to overall calculations\n",
     "\n",
@@ -417,18 +385,11 @@
     "    fixings['DC']=fixings['DC']*-1\n",
     "    fixings['Days']=fixings['DC']/timedelta(days=1)/360 #Using Act/360 Day count convention\n",
     "    fixings['FixDays']=fixings['FixRate']*fixings['Days']/100\n",
-    "    #print(fixings)\n",
-    "    #print(df.dtypes)\n",
-    "    #print(fixings['FixDays'].sum())  #This is the cumulative impact of the elapsed fixings\n",
-    "    #print(floating.dtypes)\n",
     "\n",
     "    floating.iat[0,12] = floating.iat[0,12] + fixings['FixDays'].sum()\n",
     "    floating['NPV']=floating['Notional']*(floating['Leverage']*floating['Forecast']+floating['Spread'])*floating['DC']*floating['DF']\n",
-    "    #print(floating)\n",
     "\n",
-    "    #print(\"Fixed Leg NPV :\" ,fixed['NPV'].sum())\n",
-    "    #print(\"Float Leg NPV :\" ,floating['NPV'].sum())\n",
-    "    #print(\"Total NPV: \", fixed['NPV'].sum()+floating['NPV'].sum() )\n",
+    "\n",
     "    return fixed['NPV'].sum()+floating['NPV'].sum()"
    ]
   },
@@ -437,12 +398,14 @@
    "id": "4aedfe6f",
    "metadata": {},
    "source": [
-    "Lets now generate the bucketed sensivitiy / DV01 for this trade"
+    "Lets now generate the bucketed sensivitiy / DV01 for this trade\n",
+    "\n",
+    "Approach #1 - Simpler which involves shifting the underlying curve up by 1 bps only"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e9ad3b46",
    "metadata": {},
    "outputs": [
@@ -478,6 +441,60 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf8a2385",
+   "metadata": {},
+   "source": [
+    "Approach #2 - Slightly more computationally intensive and involves shifting the underlying curve up and below by 1 bps and then taking their average"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a91d0857",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current NPV :  436822.06\n",
+      "Bucket  1 : 6.31\n",
+      "Bucket  2 : -8.53\n",
+      "Bucket  3 : -11.15\n",
+      "Bucket  4 : -16.54\n",
+      "Bucket  5 : -19.23\n",
+      "Bucket  6 : -23.43\n",
+      "Bucket  7 : -31.56\n",
+      "Bucket  8 : -33.03\n",
+      "Bucket  9 : -2769.69\n",
+      "Bucket  10 : -5319.22\n",
+      "Total Dv01 :  -8226.09\n"
+     ]
+    }
+   ],
+   "source": [
+    "NetPV = priceIRS() #Compute the unperturbed PV first\n",
+    "print (\"Current NPV : \", round(NetPV,2))\n",
+    "Dv01 = 0\n",
+    "for i in range(10):\n",
+    "    NewPVup = priceIRS(i,1) \n",
+    "    NewPVdn = priceIRS(i,-1)\n",
+    "    print(\"Bucket \",i+1 ,\":\" , round((NewPVup - NewPVdn)/2,2))\n",
+    "\n",
+    "    Dv01 = Dv01 + (NewPVup - NewPVdn)/2\n",
+    "print (\"Total Dv01 : \", round(Dv01,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "517442de",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
