--- a/Python/IRS Pricing.ipynb
+++ b/Python/IRS Pricing.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "bc2f55c2",
    "metadata": {},
    "outputs": [],
@@ -71,15 +71,19 @@
     "    from datetime import date\n",
     "    from datetime import timedelta\n",
     "    import holidays\n",
+    "    direction = 1\n",
     "    calendar1 = holidays.country_holidays(cal1)\n",
     "    if cal2 == \"NIL\":\n",
     "        while dt.weekday() > 4 or dt in calendar1:\n",
-    "            dt = dt + timedelta(days=1)\n",
+    "            if dt.month == (dt+timedelta(days=1)).month - 1:\n",
+    "                direction = -1\n",
+    "            dt = dt + timedelta(days=1)*direction \n",
     "    else:\n",
     "        calendar2 = holidays.country_holidays(cal2)\n",
     "        while dt.weekday() > 4 or dt in calendar1 or dt in calendar2:\n",
-    "            dt = dt + timedelta(days=1)\n",
-    "    #dt = date(2025,5,24)\n",
+    "            if dt.month == (dt+timedelta(days=1)).month - 1:\n",
+    "                direction = -1\n",
+    "            dt = dt + timedelta(days=1)*direction \n",
     "    return dt\n"
    ]
   },
